--- a/src/index.css
+++ b/src/index.css
@@ -20,3 +20,7 @@ body {
     -moz-box-shadow: 10px 10px 26px -8px #3D3B40;
     box-shadow: 10px 10px 26px -8px #3D3B40;
 }
+
+.light_effect{
+    box-shadow: 10px 10px 26px -8px #55810e;
+}
