--- a/src/components/carousel-small/css/embla.css
+++ b/src/components/carousel-small/css/embla.css
@@ -2,7 +2,7 @@
   --slide-spacing: 1rem;
   --slide-size: 80%;
   --slide-height: 19rem;
-  padding: 1.6rem;
+  padding: 0;
 }
 .embla__viewport {
   overflow: hidden;
