new product page

--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 :root{
     --bg-primary: #E3E1D9;
     --bg-secondary: #3D3B40;
+    --bg-terciary: #616062;
     --text-secondary: #5c5858;
     --text-primary: #ffffff;
     --font-primary: 'Poppins', sans-serif;
